Do not upgrade pip, perform full clone

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -27,9 +27,6 @@ matrix:
   # Cancel other jobs for the same build if this one fails
   fast_finish: true
 
-# Do a shallow-ish clone
-clone_depth: 5
-
 # The build setting is for .NET only: Python does not compile anything
 build: false
 
@@ -53,10 +50,10 @@ install:
   - python -c "import sys;print(sys.version)"
 
   # Make sure that wheel and twine are installed so we can build wheels and publish to PyPI
-  - pip install --user --upgrade --disable-pip-version-check pip wheel twine
+  - pip install --disable-pip-version-check setuptools wheel twine
 
   # Install the project and its dependencies
-  - pip install -e .[test]
+  - pip install --disable-pip-version-check -e .[test]
 
 cache:
   - '%LOCALAPPDATA%\pip\Cache'
