--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -16,13 +16,15 @@ environment:
 
   matrix:
 
-    - PYTHON: "C:\\Python27"
-      PYTHON_VERSION: "2.7.15"
-      PYTHON_ARCH: "32"
-
+    # Test with 64-bit interpreter first
     - PYTHON: "C:\\Python27-x64"
       PYTHON_VERSION: "2.7.15"
       PYTHON_ARCH: "64"
+
+    # Finally, test with 32-bit interpreter and publish build (when required/successful)
+    - PYTHON: "C:\\Python27"
+      PYTHON_VERSION: "2.7.15"
+      PYTHON_ARCH: "32"
 
 matrix:
   # Cancel other jobs for the same build if this one fails
@@ -33,7 +35,7 @@ build: false
 
 init:
   # Determine if a distribution should be built and published (override PUBLISH variable).
-  # Publish when a repo tag has been pushed on the master branch and the Python architecture is 32-bits.
+  # Publish when a repo tag has been pushed on the master branch and ONLY when the Python architecture is 32-BITS.
   - IF "%APPVEYOR_REPO_TAG%" == "true" IF "%APPVEYOR_REPO_BRANCH%" == "master" IF "%PYTHON_ARCH%" == "32" SET PUBLISH=true
 
   # Echo variables for verification purposes
